Update 01.Getting Started with Spring Framework.md

--- a/01.Getting Started with Spring Framework.md
+++ b/01.Getting Started with Spring Framework.md
@@ -1,4 +1,13 @@
 ## Design Game Runner to run games (Mario, SuperContra,Pacman etc)
+
+### Tight Coupling vs Loose Coupling
+
+* **Tight coupling** = Class A directly creates and depends on Class B, making it hard to test, extend, or modify without breaking things.
+
+* **Loose coupling** means that classes **know as little as possible about each other**. They **depend on abstractions** (interfaces), not concrete implementations.
+
+
+---
  
 ### Iteration 1: Tightly Coupled Java Code
 
