--- a/01.Getting Started with Spring Framework.md
+++ b/01.Getting Started with Spring Framework.md
@@ -6,6 +6,15 @@
 
 * **Loose coupling** means that classes **know as little as possible about each other**. They **depend on abstractions** (interfaces), not concrete implementations.
 
+---
+
+Iteration 1: Tightly Coupled Java Code
+
+Iteration 2: Loose Coupling - Interfaces
+
+Iteration 3: Loose Coupling - Spring Level 1
+
+Iteration 4: Loose Coupling - Spring Level 2
 
 ---
  
