Update 01.Tight Coupling vs Loose Coupling.md

--- a/01.Tight Coupling vs Loose Coupling.md
+++ b/01.Tight Coupling vs Loose Coupling.md
@@ -37,7 +37,7 @@ public class SuperContraGame{
 }
 
 public class GameRunner {
-    MarioGame game;
+    private MarioGame game; // Tightly coupled to a specific game, so we need to change this.
 
     public GameRunner(MarioGame game) {
         this.game = game;
