Update 01.Tight Coupling vs Loose Coupling.md

--- a/01.Tight Coupling vs Loose Coupling.md
+++ b/01.Tight Coupling vs Loose Coupling.md
@@ -6,6 +6,8 @@
 
 * **Loose coupling** means that classes **know as little as possible about each other**. They **depend on abstractions** (interfaces), not concrete implementations.
 
+In the example below, GameRunner class has a dependency on GamingConsole. Instead of wiring game object to a specific class such as MarioGame, we can use GamingConsole interface to make it loosely coupled. So that, we don't need to change our original code. In the future, we can create classes that implements GamingConsole interface (Polymorphism) and use it.
+
 ---
  
 ### Iteration 1: Tightly Coupled Java Code
