Update 01.Tight Coupling vs Loose Coupling.md

--- a/01.Tight Coupling vs Loose Coupling.md
+++ b/01.Tight Coupling vs Loose Coupling.md
@@ -79,7 +79,8 @@ public interface GamingConsole {
 }
 
 public class GameRunner {
-    private final GamingConsole game;
+    private final GamingConsole game; // Loosely coupled, it's not a specific game anymore.
+                                      // Games implement GamingConsole interface.
 
     GameRunner(GamingConsole game) {
         this.game = game;
