Update 01.Tight Coupling vs Loose Coupling.md

--- a/01.Tight Coupling vs Loose Coupling.md
+++ b/01.Tight Coupling vs Loose Coupling.md
@@ -82,12 +82,24 @@ public class GameRunner {
     private final GamingConsole game; // Loosely coupled, it's not a specific game anymore.
                                       // Games implement GamingConsole interface.
 
-    GameRunner(GamingConsole game) {
+    GameRunner(GamingConsole game) {  // game dependency is injected via constructor
         this.game = game;
     }
 
     public void run() {
         game.run();
+    }
+}
+
+public class BasicGamingApp {
+    public static void main(String[] args) {
+        // PacManGame game = new PacManGame();
+        // SuperContraGame game = new SuperContraGame();
+
+        MarioGame game = new MarioGame(); // object creation
+        GameRunner gameRunner = new GameRunner(game); // wiring dependencies
+        // Game is dependency of GameRunner
+        gameRunner.start();
     }
 }
 
