Update 01.Tight Coupling vs Loose Coupling.md

--- a/01.Tight Coupling vs Loose Coupling.md
+++ b/01.Tight Coupling vs Loose Coupling.md
@@ -108,5 +108,15 @@ public class BasicGamingApp {
 
 ---
 
+Right now, the creation of the objects is completely managed by us.
+
+These objects are created in the JVM, Java Virtual Machine, and the code to create these objects
+and wire them together is written by us.
+
+![jvm drawio](https://github.com/user-attachments/assets/00d4076d-262d-4b0c-ac55-1216e27eb3af)
+
+We want the Spring Framework to handle all of this—creating the objects and wiring them together for us
+
+![jvmSpring drawio](https://github.com/user-attachments/assets/d3b684a6-ddb5-4ca2-b533-7657e6288c7b)
 
 
