Update 02.Getting Started with Spring Framework.md

--- a/02.Getting Started with Spring Framework.md
+++ b/02.Getting Started with Spring Framework.md
@@ -42,5 +42,8 @@ It performs the following key tasks:
 
 * Spring uses IOC Container (Bean Factory or Application Context) to manage these objects
 
+---
+
+![SpringFramework drawio](https://github.com/user-attachments/assets/f264c0a6-0796-4278-b749-8bf9209ae2d3)
 
 
