--- a/03.Spring Beans.md
+++ b/03.Spring Beans.md
@@ -1,7 +1,5 @@
 ![SpringFramework drawio](https://github.com/user-attachments/assets/4eb93857-5da1-45f1-8aec-dd65b018d995)
 
-Absolutely! Here's a **well-structured, beginner-friendly walkthrough** of your app, written in a clean tutorial style that explains everything step by step:
-
 ---
 
 ## In this step, we will create Spring Beans using Java Configuration
@@ -17,6 +15,9 @@ Let’s walk through how to do this using **Java-based configuration**, one step
 ### Step 1: Launching the Spring Context
 
 We begin by creating a **Spring Application Context**. This context will read a configuration class (`@Configuration`) and initialize the necessary beans.
+
+![loc drawio](https://github.com/user-attachments/assets/32b6b24b-6a5d-4ad5-b514-6c91efa21ddd)
+
 
 ```java
 public class BasicGamingApp {
