--- a/03.Spring Beans.md
+++ b/03.Spring Beans.md
@@ -8,15 +8,15 @@ In traditional Java applications, we’re responsible for manually creating and 
 
 But with **Spring Framework**, we can use a **Spring Application Context** to manage object creation and wiring for us. These managed objects are known as **Beans**.
 
-Let’s walk through how to do this using **Java-based configuration**, one step at a time.
+Let’s walk through how to do this using **Java-based configuration** .
+
+![loc drawio](https://github.com/user-attachments/assets/32b6b24b-6a5d-4ad5-b514-6c91efa21ddd)
 
 ---
 
 ### Step 1: Launching the Spring Context
 
 We begin by creating a **Spring Application Context**. This context will read a configuration class (`@Configuration`) and initialize the necessary beans.
-
-![loc drawio](https://github.com/user-attachments/assets/32b6b24b-6a5d-4ad5-b514-6c91efa21ddd)
 
 
 ```java
