--- a/JPA & Hibernate with Spring Boot/3.JPA-Example.md
+++ b/JPA & Hibernate with Spring Boot/3.JPA-Example.md
@@ -28,6 +28,8 @@ public class CourseJpaRepository {
 ### Mapping `Course` to `course` Table 
 
 ```java
+import jakarta.persistence.Entity;
+import jakarta.persistence.Id;
 
 @Entity
 public class Course {
