--- a/JPA & Hibernate with Spring Boot/4.Spring-Data-JPA-Example.md
+++ b/JPA & Hibernate with Spring Boot/4.Spring-Data-JPA-Example.md
@@ -43,6 +43,8 @@ SELECT * FROM course WHERE author = ?
 ### Mapping `Course` to `course` Table 
 
 ```java
+import jakarta.persistence.Entity;
+import jakarta.persistence.Id;
 
 @Entity
 public class Course {
