--- a/JPA & Hibernate with Spring Boot/3.JPA-Example.md
+++ b/JPA & Hibernate with Spring Boot/3.JPA-Example.md
@@ -1,6 +1,9 @@
 ## JPA Class
 
 ``` java
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
+import jakarta.transaction.Transactional;
 
 @Repository
 @Transactional // is an annotation in Spring that manages transactions automatically for you.
