--- a/JPA & Hibernate with Spring Boot/1.From-jdbc-to-spring-data-jpa.md
+++ b/JPA & Hibernate with Spring Boot/1.From-jdbc-to-spring-data-jpa.md
@@ -145,3 +145,18 @@ That’s it. Spring Data JPA gives you:
 * and more… **automatically**
 
 ---
+
+## Hibernate vs JPA
+
+`JPA`  is an API -> defines the specification
+
+* How do you define entities?
+* How do you map attributes?
+* Who manages the entities?
+
+`Hibernate` is one of the popular implementations of JPA
+
+Note
+> Using Hibernate directly would result in a lock in to Hibernate
+> 
+> There are other JPA implementations (Toplink, for example)
